--- a/refs-main.bib
+++ b/refs-main.bib
@@ -206,3 +206,39 @@
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2410.22391},
 }
+
+@misc{langchain-docs,
+title = {LangChain Overview},
+author = {{LangChain Team}},
+year = {2025},
+howpublished = {\url{https://docs.langchain.com/oss/python/langchain/overview}}
+,
+note = {Accessed on 13 November 2025}
+}
+
+
+@misc{moveit2,
+  author       = {Elephant Robotics},
+  title        = {MoveIt2 Development Guide (ROS2)},
+  year         = {2025},
+  url          = {https://docs.elephantrobotics.com/docs/mycobot_280_ar_en/3-FunctionsAndApplications/6.developmentGuide/ROS/12.2-ROS2/12.2.5-Moveit2/#introduction-to-moveit2},
+  note         = {Accessed: 2025-09-15}
+}
+
+
+@inproceedings{pddl-1.2,
+  title={PDDL-the planning domain definition language},
+  author={Drew McDermott and Malik Ghallab and Adele E. Howe and Craig A. Knoblock and Ashwin Ram and Manuela M. Veloso and Daniel S. Weld and David E. Wilkins},
+  year={1998},
+  url={https://api.semanticscholar.org/CorpusID:59656859}
+}
+
+@misc{the-fast-downward-planning-system,
+      title={The Fast Downward Planning System}, 
+      author={M. Helmert},
+      year={2011},
+      eprint={1109.6051},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/1109.6051}, 
+}
