--- a/refs-main.bib
+++ b/refs-main.bib
@@ -242,3 +242,19 @@ note = {Accessed on 13 November 2025}
       primaryClass={cs.AI},
       url={https://arxiv.org/abs/1109.6051}, 
 }
+
+@misc{gazebo,
+  title        = {About Gazebo Sim},
+  author       = {{Open Robotics / Gazebo Project}},
+  howpublished = {\url{https://gazebosim.org/about}},
+  year         = 2025,
+  note         = {Accessed: 2025-10-13}
+}
+
+@misc{ur_ros2_driver,
+  author       = {Universal Robots A/S},
+  title        = {Universal Robots ROS2 Driver},
+  year         = {2024},
+  howpublished = {\url{https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver}},
+  note         = {Accessed: 2025-10-16}
+}
