feat: Related Work first draft

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -430,6 +430,21 @@ The \textbf{LLM-Direct} approach achieved a 100\% success rate, utilizing its "t
 \par\textcolor{red}{\textbf{Description of neural techniques using just LLMs or similar}}
 \par\textcolor{red}{\textbf{Other neuro-symbolic / LAM approaches}}
 
+The realization of intelligent robotic agents requires bridging the gap between high-level semantic understanding and low-level physical actuation. The literature describes a progression from purely symbolic planners to data-driven neural networks, and more recently, towards integrated Large Action Models (LAMs).
+
+\par\textbf{Classic Planning and Symbolic Control.}
+Historically, robot planning has relied on the segregation of high-level task planning and low-level motion planning. Traditional methods utilize hand-coded symbols and strict hierarchical decompositions to map environment states to actions~\cite{learning-neuro-symbolic, code-as-symbolic-planner}. A cornerstone of this approach is the Planning Domain Definition Language (PDDL), which allows solvers to generate reliable, long-horizon plans based on pre-defined logical operators~\cite{optimizatoin-and-motion-planning}.
+While these symbolic approaches offer high interpretability and guarantee that constraints are met, they face significant scalability barriers. They rely on fixed domain-specific languages, making them brittle in unstructured environments and difficult to scale to new tasks without expert intervention~\cite{ns-vqa}. Furthermore, they often struggle to effectively integrate discrete task decisions with the continuous geometric and kinematic constraints required for dynamic manipulation~\cite{tamp, cliport}. Despite these limitations, the explicit reasoning chain provided by symbolic planners remains a critical asset for verification and safety in robotic systems.
+
+\par\textbf{Neural Planning and Large Language Models.}
+To address the rigidity of symbolic systems, recent research has pivoted toward neural approaches, specifically leveraging Large Language Models (LLMs) and Vision-Language-Action (VLA) models. LLM-based planners exploit the broad commonsense reasoning of pre-trained models to interpret natural language instructions. Approaches such as \textit{Code-as-Policies} query LLMs to generate executable Python code that creates robot actions from pre-defined primitives~\cite{code-as-policies}. Similarly, end-to-end systems like CLIPORT combine semantic understanding with spatial precision streams, enabling generalization across unseen semantic concepts without hand-designed perception pipelines~\cite{cliport, transporter}.
+However, these monolithic neural approaches often operate as "black boxes," suffering from hallucination, a lack of explainability, and difficulties in handling complex numerical constraints~\cite{vla-in-robot}. While they excel at open-world visual grounding, they typically lack the formal verification mechanisms necessary for safe deployment in collaborative environments~\cite{plangenllm}.
+
+\par\textbf{Large Action Models and Neuro-Symbolic Integration.}
+The convergence of these paradigms has led to the emergence of Large Action Models (LAMs). Unlike traditional LLMs that focus on text generation, LAMs are designed to actively interact with and manipulate physical and digital environments~\cite{lam}. This transition moves AI from passive language understanding to active task completion, a critical milestone for artificial general intelligence~\cite{lam}.
+Recent frameworks propose constructing LAMs by composing smaller, efficient models rather than relying on massive, monolithic architectures. For instance, recent studies suggest that modern recurrent architectures, such as xLSTM, can serve as the backbone for Large Recurrent Action Models (LRAMs), offering linear-time inference complexity suitable for real-time robotics tasks while maintaining the parallelization benefits of Transformers~\cite{lram}.
+To ensure control and reliability, neuro-symbolic architectures are used. These systems disentangle perception (neural) from reasoning (symbolic), using neural networks for visual grounding and symbolic engines for structured planning~\cite{nsai, enhancing-interpret}. By verifying neural outputs against symbolic constraints (e.g., PDDL), these approaches mitigate the "black box" problem, offering a pathway to robust, interpretable, and verifiable Large Action Models~\cite{audere}.
+
 \section{Conclusions}
 
 \par\textcolor{red}{\textbf{Very short paragraph re-stating the contributions of your work; very similar to the "One sentence summarizing the main result" from the abstract}}
