--- a/refs-main.bib
+++ b/refs-main.bib
@@ -258,3 +258,119 @@ note = {Accessed on 13 November 2025}
   howpublished = {\url{https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver}},
   note         = {Accessed: 2025-10-16}
 }
+
+@inproceedings{learning-neuro-symbolic,
+  title = {Learning Neuro-symbolic Programs for Language Guided Robot Manipulation},
+  url = {http://dx.doi.org/10.1109/icra48891.2023.10160545},
+  DOI = {10.1109/icra48891.2023.10160545},
+  booktitle = {2023 IEEE International Conference on Robotics and Automation (ICRA)},
+  publisher = {IEEE},
+  author = {K,  Namasivayam and Singh,  Himanshu and Bindal,  Vishal and Tuli,  Arnav and Agrawal,  Vishwajeet and Jain,  Rahul and Singla,  Parag and Paul,  Rohan},
+  year = {2023},
+  month = may,
+  pages = {7973–7980}
+}
+
+@article{optimizatoin-and-motion-planning,
+  title = {A Survey of Optimization-Based Task and Motion Planning: From Classical to Learning Approaches},
+  volume = {30},
+  ISSN = {1941-014X},
+  url = {http://dx.doi.org/10.1109/TMECH.2024.3452509},
+  DOI = {10.1109/tmech.2024.3452509},
+  number = {4},
+  journal = {IEEE/ASME Transactions on Mechatronics},
+  publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+  author = {Zhao,  Zhigen and Cheng,  Shuo and Ding,  Yan and Zhou,  Ziyi and Zhang,  Shiqi and Xu,  Danfei and Zhao,  Ye},
+  year = {2025},
+  month = aug,
+  pages = {2799–2825}
+}
+
+@inproceedings{ns-vqa,
+  title={Neural-Symbolic VQA: Disentangling Reasoning from Vision and Language Understanding},
+  author={Kexin Yi and Jiajun Wu and Chuang Gan and Antonio Torralba and Pushmeet Kohli and Joshua B. Tenenbaum},
+  booktitle={Neural Information Processing Systems},
+  year={2018},
+  url={https://api.semanticscholar.org/CorpusID:52919654}
+}
+
+@misc{cliport,
+      title={CLIPort: What and Where Pathways for Robotic Manipulation}, 
+      author={Mohit Shridhar and Lucas Manuelli and Dieter Fox},
+      year={2021},
+      eprint={2109.12098},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2109.12098}, 
+}
+
+@inproceedings{code-as-policies,
+  title = {Code as Policies: Language Model Programs for Embodied Control},
+  url = {http://dx.doi.org/10.1109/icra48891.2023.10160591},
+  DOI = {10.1109/icra48891.2023.10160591},
+  booktitle = {2023 IEEE International Conference on Robotics and Automation (ICRA)},
+  publisher = {IEEE},
+  author = {Liang,  Jacky and Huang,  Wenlong and Xia,  Fei and Xu,  Peng and Hausman,  Karol and Ichter,  Brian and Florence,  Pete and Zeng,  Andy},
+  year = {2023},
+  month = may 
+}
+
+@misc{transporter,
+      title={Transporter Networks: Rearranging the Visual World for Robotic Manipulation}, 
+      author={Andy Zeng and Pete Florence and Jonathan Tompson and Stefan Welker and Jonathan Chien and Maria Attarian and Travis Armstrong and Ivan Krasin and Dan Duong and Ayzaan Wahid and Vikas Sindhwani and Johnny Lee},
+      year={2022},
+      eprint={2010.14406},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2010.14406}, 
+}
+
+@misc{vla-in-robot,
+      title={Large VLM-based Vision-Language-Action Models for Robotic Manipulation: A Survey}, 
+      author={Rui Shao and Wei Li and Lingsen Zhang and Renshan Zhang and Zhiyang Liu and Ran Chen and Liqiang Nie},
+      year={2025},
+      eprint={2508.13073},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2508.13073}, 
+}
+
+@misc{audere,
+      title={AuDeRe: Automated Strategy Decision and Realization in Robot Planning and Control via LLMs}, 
+      author={Yue Meng and Fei Chen and Yongchao Chen and Chuchu Fan},
+      year={2025},
+      eprint={2504.03015},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2504.03015}, 
+}
+
+@misc{xlam,
+      title={xLAM: A Family of Large Action Models to Empower AI Agent Systems}, 
+      author={Caiming Xiong and Juan Carlos Niebles and Jianguo Zhang and Ran Xu and Silvio Savarese and Juntao Tan and Huan Wang and Zhiwei Liu and Tian Lan and Ming Zhu and Yihao Feng and Zuxin Liu and Zeyuan Chen and Weiran Yao and Shelby Heinecke and Eric Hu and Akshara Prabhakar and Thai Hoang and Shirley Kokane and Rithesh Murthy and Haolin Chen and Tulika Awalgaonkar},
+      year={2024},
+      eprint={2409.03215},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2409.03215}, 
+}
+
+@misc{dahlia,
+      title={Embodied Long Horizon Manipulation with Closed-loop Code Generation and Incremental Few-shot Adaptation}, 
+      author={Yuan Meng and Xiangtong Yao and Haihui Ye and Yirui Zhou and Shengqiang Zhang and Zhenguo Sun and Xukun Li and Zhenshan Bing and Alois Knoll},
+      year={2025},
+      eprint={2503.21969},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2503.21969}, 
+}
+
+@misc{graspvla,
+      title={GraspVLA: a Grasping Foundation Model Pre-trained on Billion-scale Synthetic Action Data}, 
+      author={Shengliang Deng and Mi Yan and Songlin Wei and Haixin Ma and Yuxin Yang and Jiayi Chen and Zhiqi Zhang and Taoyu Yang and Xuheng Zhang and Wenhao Zhang and Heming Cui and Zhizheng Zhang and He Wang},
+      year={2025},
+      eprint={2505.03233},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2505.03233}, 
+}
