feat: complete first draft Related Work

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -426,24 +426,22 @@ The \textbf{LLM-Direct} approach achieved a 100\% success rate, utilizing its "t
 \textbf{Safety and Responsiveness:} A critical requirement for LAMs operating in human-centric spaces is the ability to override AI autonomy with deterministic safety layers. We measured the system's latency in processing an ``Emergency Stop'' voice command during active motion. The system achieved an average stop latency of $1.41 \pm 0.14$ seconds. This confirms that the hierarchical architecture successfully decouples high-level AI planning from low-level safety protocols, ensuring that human intervention remains preemptive regardless of the complexity of the current AI task.
 
 \section{Related Work}
-\par\textcolor{red}{\textbf{Description of classic techniques (symbolic only), focusing on PDDL}}
-\par\textcolor{red}{\textbf{Description of neural techniques using just LLMs or similar}}
-\par\textcolor{red}{\textbf{Other neuro-symbolic / LAM approaches}}
 
-The realization of intelligent robotic agents requires bridging the gap between high-level semantic understanding and low-level physical actuation. The literature describes a progression from purely symbolic planners to data-driven neural networks, and more recently, towards integrated Large Action Models (LAMs).
+The realization of intelligent robotic agents requires bridging the gap between high-level semantic understanding and low-level physical actuation. The literature describes a progression from purely symbolic planners to data-driven neural networks, and more recently, towards integrated Large Action Models (LAMs) and hybrid architectures.
 
-\par\textbf{Classic Planning and Symbolic Control.}
+\par\subsection{Classic Planning and Symbolic Control.}
 Historically, robot planning has relied on the segregation of high-level task planning and low-level motion planning. Traditional methods utilize hand-coded symbols and strict hierarchical decompositions to map environment states to actions~\cite{learning-neuro-symbolic, code-as-symbolic-planner}. A cornerstone of this approach is the Planning Domain Definition Language (PDDL), which allows solvers to generate reliable, long-horizon plans based on pre-defined logical operators~\cite{optimizatoin-and-motion-planning}.
 While these symbolic approaches offer high interpretability and guarantee that constraints are met, they face significant scalability barriers. They rely on fixed domain-specific languages, making them brittle in unstructured environments and difficult to scale to new tasks without expert intervention~\cite{ns-vqa}. Furthermore, they often struggle to effectively integrate discrete task decisions with the continuous geometric and kinematic constraints required for dynamic manipulation~\cite{tamp, cliport}. Despite these limitations, the explicit reasoning chain provided by symbolic planners remains a critical asset for verification and safety in robotic systems.
 
-\par\textbf{Neural Planning and Large Language Models.}
-To address the rigidity of symbolic systems, recent research has pivoted toward neural approaches, specifically leveraging Large Language Models (LLMs) and Vision-Language-Action (VLA) models. LLM-based planners exploit the broad commonsense reasoning of pre-trained models to interpret natural language instructions. Approaches such as \textit{Code-as-Policies} query LLMs to generate executable Python code that creates robot actions from pre-defined primitives~\cite{code-as-policies}. Similarly, end-to-end systems like CLIPORT combine semantic understanding with spatial precision streams, enabling generalization across unseen semantic concepts without hand-designed perception pipelines~\cite{cliport, transporter}.
+\par\subsection{Neural Planning and Vision-Language-Action Models.}
+To address the rigidity of symbolic systems, recent research has pivoted toward neural approaches, specifically leveraging Large Language Models (LLMs) and Vision-Language-Action (VLA) models. LLM-based planners exploit the broad commonsense reasoning of pre-trained models to interpret natural language instructions. Approaches such as \textit{Code-as-Policies} query LLMs to generate executable Python code that creates robot actions from pre-defined primitives~\cite{code-as-policies}.
+Recent advancements have focused on end-to-end VLA models that unify perception and control. For instance, GraspVLA introduces a pre-training paradigm relying entirely on large-scale synthetic action data. It utilizes a Progressive Action Generation mechanism, treating perception tasks as intermediate Chain-of-Thought steps to generate continuous robot actions, thereby bridging the sim-to-real gap without costly real-world data collection~\cite{graspvla}.
 However, these monolithic neural approaches often operate as "black boxes," suffering from hallucination, a lack of explainability, and difficulties in handling complex numerical constraints~\cite{vla-in-robot}. While they excel at open-world visual grounding, they typically lack the formal verification mechanisms necessary for safe deployment in collaborative environments~\cite{plangenllm}.
 
-\par\textbf{Large Action Models and Neuro-Symbolic Integration.}
-The convergence of these paradigms has led to the emergence of Large Action Models (LAMs). Unlike traditional LLMs that focus on text generation, LAMs are designed to actively interact with and manipulate physical and digital environments~\cite{lam}. This transition moves AI from passive language understanding to active task completion, a critical milestone for artificial general intelligence~\cite{lam}.
-Recent frameworks propose constructing LAMs by composing smaller, efficient models rather than relying on massive, monolithic architectures. For instance, recent studies suggest that modern recurrent architectures, such as xLSTM, can serve as the backbone for Large Recurrent Action Models (LRAMs), offering linear-time inference complexity suitable for real-time robotics tasks while maintaining the parallelization benefits of Transformers~\cite{lram}.
-To ensure control and reliability, neuro-symbolic architectures are used. These systems disentangle perception (neural) from reasoning (symbolic), using neural networks for visual grounding and symbolic engines for structured planning~\cite{nsai, enhancing-interpret}. By verifying neural outputs against symbolic constraints (e.g., PDDL), these approaches mitigate the "black box" problem, offering a pathway to robust, interpretable, and verifiable Large Action Models~\cite{audere}.
+\par\subsection{Large Action Models and Hybrid Architectures.}
+The convergence of these paradigms has led to the emergence of Large Action Models (LAMs), designed to actively interact with and manipulate physical and digital environments rather than just generating text~\cite{lam}. For example, the xLAM series proposes a family of models specifically optimized for autonomous agent tasks, such as function calling and multi-turn interaction, achieving state-of-the-art performance by unifying and synthesizing diverse agent datasets~\cite{xlam}.
+To ensure control and reliability, newer approaches are moving away from purely monolithic designs toward structured, neuro-symbolic, or hierarchical architectures. DAHLIA, for instance, introduces a data-agnostic framework employing a "dual-tunnel" architecture. It pairs an LLM-powered planner with a reporter module that provides closed-loop feedback, utilizing temporal abstraction and Chain-of-Thought reasoning to enable adaptive re-planning and failure recovery in long-horizon tasks~\cite{dahlia}. Similarly, recent studies suggest that modern recurrent architectures, such as xLSTM, can serve as efficient backbones for Large Recurrent Action Models (LRAMs), offering linear-time inference complexity suitable for real-time robotics tasks~\cite{lram}.
+These structured approaches disentangle perception from reasoning, using neural networks for visual grounding and symbolic or structured engines for planning~\cite{nsai, enhancing-interpret}. By verifying neural outputs against constraints, such as those defined in PDDL, these hybrid frameworks mitigate the "black box" problem, offering a pathway to robust, interpretable, and verifiable Large Action Models~\cite{audere}.
 
 \section{Conclusions}
 
